--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 </p>
                 <br>
                 <h3>I love games, and...</h3>
-                <p>I create games. I have started making RPG board games since I was in primary school. After I leant how to code with Pascal, I started creating storytelling text games. In the future, I would like to transfer my RPG board games to video games (in 2D, of course).</p>
+                <p>I create games. I have started making RPG board games since I was in primary school. After I learnt how to code with Pascal, I started creating storytelling text games. In the future, I would like to transfer my RPG board games to video games (in 2D, of course).</p>
                 <br>
                 <h3>I do arts. For me...</h3>
                 <p>Arts is the perfect way to represent my own feeling. I enjoy doing arts. However, I hate dirty. Thus I usually just draw with colour pencils and markers. (Usless I have to do my school projects, then I will try ohter media.)</p>
