--- a/cs230.html
+++ b/cs230.html
@@ -142,7 +142,7 @@
                     <br>
                     Lastly, we require inputer/output devices.<br>
                 </p>
-                <img src="./image/cs230/lec1/1_1.PNG" width="35%" height="35%">
+                <img src="./image/cs230/lec1/1_1.PNG" align="left" class="leftMargin">
                 <p>
                     Von Neumann Architecture is still the basis for almost all computers today.<br>
                     (Strict Von Neumann Architecture says that data and program must be stored on the same memory unit; this is not always the case Harvard Architecture.)<br>
@@ -214,11 +214,7 @@
                     For any length <i>n</i> word in base <span class="math">r</span>, we have 
                     <span class="math">d<sub>n-1</sub>, d<sub>n-2</sub>, ..., d<sub>2</sub>, d<sub>1</sub>, d<sub>0</sub>.</span><br>
                     <br>
-                    We can "calculate" or rather compue the decimal value number by doing<br>
-                </p>
-                <img src="./image/cs230/lec1/1_2.PNG" width="7%" height="7%">
-                <br>
-                <p>
+                    We can "calculate" or rather compue the decimal value number by doing <img src="./image/cs230/lec1/1_2.PNG" width="65px" height="65px" align="middle"><br>
                     You can use any number for your base.<br>
                 </p>
                 <ul>
