--- a/cs230.html
+++ b/cs230.html
@@ -4725,9 +4725,7 @@
                 </p>
                 <table class="textTable">
                     <tr>
-                        <th>Direct</th>
-                        <th>Mapped</th>
-                        <th colspan="3"></th>
+                        <th colspan="5">Direct-Mapped</th>
                     </tr>
                     <tr>
                         <th>&nbsp;Slot&nbsp;</th>
@@ -4765,7 +4763,7 @@
                         <td>Miss</td>
                     </tr>
                     <tr>
-                        <td colspan="2">2-way Associative Cache</td>
+                        <td colspan="2"></td>
                         <td>8</td>
                         <td>0</td>
                         <td>Miss</td>
@@ -4773,6 +4771,9 @@
                 </table>
                 <br>
                 <table class="textTable">
+                    <tr>
+                        <th colspan="6">2-way Associative Cache</th>
+                    </tr>
                     <tr>
                         <th>Set Number</th>
                         <th>Slot Number</th>
@@ -4782,7 +4783,7 @@
                         <th>Hit/Miss</th>
                     </tr>
                     <tr>
-                        <td rowspan="2">1</td>
+                        <td rowspan="2">0</td>
                         <td>0</td>
                         <td><del>MEM[0]</del>&nbsp;MEM[6]</td>
                         <td>0</td>
@@ -4797,7 +4798,7 @@
                         <td>Miss</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">2</td>
+                        <td rowspan="2">1</td>
                         <td>2</td>
                         <td></td>
                         <td>0</td>
